--- a/QuranApp/app/src/main/res/layout/activity_main.xml
+++ b/QuranApp/app/src/main/res/layout/activity_main.xml
@@ -2,17 +2,21 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:padding="0dp"
+    android:paddingTop="50dp"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    >
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="521dp"
-        android:layout_height="941dp"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/surahRv"
+        android:layout_width="409dp"
+        android:layout_height="729dp"
+        android:background="#fff"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/q" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
